--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustdoc-types"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>", "The Rust Project Developers"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -10,3 +10,6 @@ repository = "https://github.com/aDotInTheVoid/rustdoc-types/"
 
 [dependencies]
 serde = {version="1", features=["derive"]}
+
+[dev-dependencies]
+serde_json = "1.0"
