feat: add rustc-hash feature
Changes in preparation of [rust-lang/rust#131936][1]:

- Introduce `rustc-hash` dependency and feature.
- Modify the `update.sh` script accordingly.

[1]: https://github.com/rust-lang/rust/pull/131936

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,16 @@ repository = "https://github.com/rust-lang/rustdoc-types"
 
 [dependencies]
 serde = {version="1", features=["derive"]}
+rustc-hash = {version="2", optional=true}
+
+[features]
+default = []
+
+# Switch the hashmaps used in rustdoc-types to the FxHashMap from rustc-hash.
+#
+# This might improve performace if your are reading the rustdoc JSON from large
+# crates like aws_sdk_ec2
+rustc-hash = ["dep:rustc-hash"]
 
 [dev-dependencies]
 bincode = "1.3.3"
